Tests/CI: Add test for protocol-compiler rejections

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -223,6 +223,11 @@ integration:proto:sandbox:
   script:
     - dune build @runtest_sandbox
 
+integration:compiler-rejections:
+  <<: *integration_definition
+  script:
+    - dune build @runtest_rejections
+
 ############################################################
 ## Stage: run OCaml integration tests                     ##
 ############################################################
