Client/mockup: add local RPC wrapper class `unix_mockup`

--- a/src/lib_client_base_unix/dune
+++ b/src/lib_client_base_unix/dune
@@ -6,6 +6,8 @@
             tezos-client-commands
             tezos-stdlib-unix
             tezos-rpc-http-client-unix
+            tezos-mockup
+            tezos-mockup-registration
             tezos-signer-backends.unix
             tezos-shell-services)
  (flags (:standard -open Tezos_base__TzPervasives
