Client/alpha: introduce mockup facilities protocol-side

--- a/src/proto_005_PsBabyM1/lib_client/dune
+++ b/src/proto_005_PsBabyM1/lib_client/dune
@@ -5,8 +5,10 @@
             tezos-protocol-005-PsBabyM1
             tezos-shell-services
             tezos-client-base
+            tezos-mockup-registration
             tezos-rpc
             tezos-signer-backends
+            tezos-protocol-005-PsBabyM1-parameters
             bip39)
  (library_flags (:standard -linkall))
  (flags (:standard -open Tezos_base__TzPervasives
