--- a/src/bin_client/tezos-client.opam
+++ b/src/bin_client/tezos-client.opam
@@ -24,6 +24,7 @@ depends: [
   "tezos-client-004-Pt24m4xi"
   "tezos-client-005-PsBabyM1"
   "tezos-client-006-PsCARTHA"
+  "tezos-client-demo-counter"
 
   "tezos-client-alpha-commands"
   "tezos-client-001-PtCJ7pwo-commands"
