--- a/data-encoding.opam
+++ b/data-encoding.opam
@@ -10,8 +10,8 @@ depends: [
   "dune" { >= "1.7" }
   "ezjsonm"
   "zarith"
-  "ocplib-json-typed" { >= "0.7" }
-  "ocplib-json-typed-bson" { >= "0.7" }
+  "json-data-encoding" { >= "0.8" }
+  "json-data-encoding-bson" { >= "0.8" }
   "alcotest" { with-test }
   "crowbar" { with-test }
 ]
