--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1278,6 +1278,7 @@ publish:docker:
         "${CI_COMMIT_REF_NAME}"
         "${build_deps_image_name}"
         "${build_deps_image_version}"
+        "${CI_COMMIT_SHORT_SHA}"
     - docker push "${public_docker_image_name}:${CI_COMMIT_REF_NAME}"
     - docker push "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}"
     - docker push "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}"
