--- a/src/bin_signer/dune
+++ b/src/bin_signer/dune
@@ -1,6 +1,7 @@
 (executables
  (names main_signer)
  (public_names tezos-signer)
+ (package tezos-signer)
  (libraries tezos-base
             tezos-client-base
             tezos-client-base-unix
