--- a/src/lib_workers/dune
+++ b/src/lib_workers/dune
@@ -9,5 +9,6 @@
 
 (alias
  (name runtest_lint)
+ (package tezos-workers)
  (deps (glob_files *.ml{,i}))
  (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
