--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 build-and-test:
   image: ocaml/opam2:alpine-3.10-ocaml-4.08
   script:
+    - opam repository set-url default https://opam.ocaml.org
+    - opam update
     - opam pin --no-action data-encoding .
     - opam depext ocamlformat.0.11.0
     - opam install ocamlformat.0.11.0
