--- a/src/lib_error_monad/dune
+++ b/src/lib_error_monad/dune
@@ -2,10 +2,10 @@
  (name tezos_error_monad)
  (public_name tezos-error-monad)
  (flags (:standard -open Tezos_stdlib
-                   -open Tezos_data_encoding
+                   -open Data_encoding
                    ))
  (libraries tezos-stdlib
-            tezos-data-encoding
+            data-encoding
             lwt-canceler
             lwt))
 
