--- a/src/lib_crypto/dune
+++ b/src/lib_crypto/dune
@@ -2,11 +2,11 @@
  (name tezos_crypto)
  (public_name tezos-crypto)
  (flags (:standard -open Tezos_stdlib
-                   -open Tezos_data_encoding
+                   -open Data_encoding
                    -open Tezos_error_monad
                    -open Tezos_rpc))
  (libraries tezos-stdlib
-            tezos-data-encoding
+            data-encoding
             tezos-error-monad
             tezos-rpc
             lwt
