--- a/src/lib_event_logging/tezos-event-logging.opam
+++ b/src/lib_event_logging/tezos-event-logging.opam
@@ -10,7 +10,7 @@ depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "1.0.1" }
   "tezos-stdlib"
-  "tezos-data-encoding"
+  "data-encoding" { = "0.2" }
   "tezos-error-monad"
   "lwt_log"
 ]
