--- a/src/lib_micheline/tezos-micheline.opam
+++ b/src/lib_micheline/tezos-micheline.opam
@@ -8,7 +8,7 @@ license: "MIT"
 depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "1.7" }
-  "tezos-data-encoding"
+  "data-encoding" { = "0.2" }
   "tezos-error-monad"
   "uutf"
   "alcotest-lwt" { with-test & = "0.8.5" }
