--- a/src/lib_stdlib_unix/dune
+++ b/src/lib_stdlib_unix/dune
@@ -5,8 +5,8 @@
                    -open Tezos_event_logging
                    -open Tezos_rpc
                    -open Tezos_stdlib
-                   -open Tezos_data_encoding))
- (libraries tezos-data-encoding
+                   -open Data_encoding))
+ (libraries data-encoding
             tezos-error-monad
             tezos-event-logging
             tezos-rpc
