--- a/src/lib_stdlib_unix/tezos-stdlib-unix.opam
+++ b/src/lib_stdlib_unix/tezos-stdlib-unix.opam
@@ -9,7 +9,7 @@ depends: [
   "tezos-tooling" { with-test }
   "base-unix"
   "dune" { >= "1.7" }
-  "tezos-data-encoding"
+  "data-encoding" { = "0.2" }
   "tezos-error-monad"
   "tezos-event-logging"
   "tezos-rpc"
