Everywhere: set version of alcotest/alcotest-lwt dependency

--- a/src/lib_error_monad/tezos-error-monad.opam
+++ b/src/lib_error_monad/tezos-error-monad.opam
@@ -12,7 +12,7 @@ depends: [
   "tezos-data-encoding"
   "lwt"
   "lwt-canceler" { = "0.2" }
-  "alcotest-lwt" { with-test }
+  "alcotest-lwt" { with-test & = "0.8.5" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
