--- a/src/lib_crypto/tezos-crypto.opam
+++ b/src/lib_crypto/tezos-crypto.opam
@@ -19,7 +19,7 @@ depends: [
   "zarith"
   "secp256k1"
   "uecc"
-  "alcotest" { with-test & >= "0.8.3" }
+  "alcotest" { with-test & = "0.8.5" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
