--- a/src/lib_micheline/tezos-micheline.opam
+++ b/src/lib_micheline/tezos-micheline.opam
@@ -11,7 +11,7 @@ depends: [
   "tezos-data-encoding"
   "tezos-error-monad"
   "uutf"
-  "alcotest-lwt" { with-test }
+  "alcotest-lwt" { with-test & = "0.8.5" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
