--- a/src/lib_stdlib/tezos-stdlib.opam
+++ b/src/lib_stdlib/tezos-stdlib.opam
@@ -15,7 +15,7 @@ depends: [
   "lwt_log" { with-test }
   "zarith"
   "mtime"
-  "alcotest" { with-test }
+  "alcotest" { with-test & = "0.8.5" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
