--- a/src/proto_003_PsddFKi3/lib_protocol/tezos-protocol-003-PsddFKi3.opam
+++ b/src/proto_003_PsddFKi3/lib_protocol/tezos-protocol-003-PsddFKi3.opam
@@ -9,7 +9,7 @@ depends: [
   "dune" { build & >= "1.7" }
   "tezos-base"
   "tezos-protocol-compiler"
-  "alcotest-lwt" { with-test }
+  "alcotest-lwt" { with-test & = "0.8.5" }
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
   "tezos-shell-services" { with-test }
