--- a/src/proto_004_Pt24m4xi/lib_client/tezos-client-004-Pt24m4xi.opam
+++ b/src/proto_004_Pt24m4xi/lib_client/tezos-client-004-Pt24m4xi.opam
@@ -14,7 +14,7 @@ depends: [
   "tezos-shell-services"
   "tezos-client-base-unix"
   "tezos-signer-backends"
-  "alcotest-lwt" { with-test }
+  "alcotest-lwt" { with-test & = "0.8.5" }
 ]
 build: [
   [ "dune" "build" "-p" name "-j" jobs ]
