--- a/src/proto_005_PsBabyM1/lib_client/tezos-client-005-PsBabyM1.opam
+++ b/src/proto_005_PsBabyM1/lib_client/tezos-client-005-PsBabyM1.opam
@@ -14,7 +14,7 @@ depends: [
   "tezos-shell-services"
   "tezos-client-base-unix"
   "tezos-signer-backends"
-  "alcotest-lwt" { with-test }
+  "alcotest-lwt" { with-test & = "0.8.5" }
 ]
 build: [
   [ "dune" "build" "-p" name "-j" jobs ]
