--- a/src/proto_005_PsBabyM1/lib_protocol/tezos-protocol-005-PsBabyM1-tests.opam
+++ b/src/proto_005_PsBabyM1/lib_protocol/tezos-protocol-005-PsBabyM1-tests.opam
@@ -10,7 +10,7 @@ depends: [
   "dune" { build & >= "1.7" }
   "tezos-base"
   "tezos-protocol-compiler"
-  "alcotest-lwt" { with-test }
+  "alcotest-lwt" { with-test & = "0.8.5" }
   "tezos-005-PsBabyM1-test-helpers" { with-test }
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
