--- a/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
+++ b/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
@@ -10,7 +10,7 @@ depends: [
   "dune" { >= "1.7" }
   "tezos-base"
   "tezos-protocol-compiler"
-  "alcotest-lwt" { with-test }
+  "alcotest-lwt" { with-test & = "0.8.5" }
   "tezos-alpha-test-helpers" { with-test }
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
