Build: Use dune 2

--- a/src/lib_protocol_compiler/tezos-protocol-compiler.opam
+++ b/src/lib_protocol_compiler/tezos-protocol-compiler.opam
@@ -9,7 +9,7 @@ depends: [
   "tezos-tooling" { with-test }
   ## ocaml should be in sync with `script/version.sh`
   "ocaml" { = "4.07.1" }
-  "dune" { >= "1.7" & < "2.0" }
+  "dune" { >= "1.7" }
   "base-unix"
   "tezos-base"
   "tezos-protocol-environment"
