--- a/src/lib_protocol_compiler/dune_protocol.template
+++ b/src/lib_protocol_compiler/dune_protocol.template
@@ -4,7 +4,7 @@
  (action
   (write-file %{targets}
               "module Name = struct let name = \"%%VERSION%%\" end
-include Tezos_protocol_environment.MakeV1(Name)()
+include Tezos_protocol_environment.Make%%ENV_VERSION%%(Name)()
 module CamlinternalFormatBasics = struct include CamlinternalFormatBasics end
 ")))
 
