--- a/src/lib_protocol_environment/dune
+++ b/src/lib_protocol_environment/dune
@@ -10,9 +10,11 @@
  (wrapped false)
  (modules Tezos_protocol_environment
           Environment_V0
+          Environment_V1
           Environment_context
           Environment_protocol_T
           Environment_protocol_T_V0
+          Environment_protocol_T_V1
           Dummy_context
           Memory_context))
 
