--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,11 @@ build:
 
 # this section is updated using the script scripts/update_unit_test.sh
 ##BEGIN_UNITEST##
+unit:requester:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_requester/runtest
+
 unit:src/proto_005_PsBabyM1/lib_client:
   <<: *test_definition
   script:
@@ -102,50 +107,45 @@ unit:src/proto_005_PsBabyM1/lib_protocol:
   script:
     - dune build @src/proto_005_PsBabyM1/lib_protocol/runtest
 
-unit:src/proto_004_Pt24m4xi/lib_client:
-  <<: *test_definition
-  script:
-    - dune build @src/proto_004_Pt24m4xi/lib_client/runtest
-
-unit:stdlib:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_stdlib/runtest
-
 unit:storage:
   <<: *test_definition
   script:
     - dune build @src/lib_storage/runtest
-
-unit:error_monad:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_error_monad/runtest
-
-unit:src/proto_003_PsddFKi3/lib_client:
-  <<: *test_definition
-  script:
-    - dune build @src/proto_003_PsddFKi3/lib_client/runtest
 
 unit:shell:
   <<: *test_definition
   script:
     - dune build @src/lib_shell/runtest
 
-unit:p2p:
+unit:signer_backends/unix:
   <<: *test_definition
   script:
-    - dune build @src/lib_p2p/runtest
+    - dune build @src/lib_signer_backends/unix/runtest
 
-unit:src/proto_alpha/lib_client:
+unit:signer_backends:
   <<: *test_definition
   script:
-    - dune build @src/proto_alpha/lib_client/runtest
+    - dune build @src/lib_signer_backends/runtest
 
-unit:src/proto_alpha/lib_protocol:
+unit:protocol_environment:
   <<: *test_definition
   script:
-    - dune build @src/proto_alpha/lib_protocol/runtest
+    - dune build @src/lib_protocol_environment/runtest
+
+unit:error_monad:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_error_monad/runtest
+
+unit:src/bin_client:
+  <<: *test_definition
+  script:
+    - dune build @src/bin_client/runtest
+
+unit:micheline:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_micheline/runtest
 
 unit:src/proto_006_PsCARTHA/lib_client:
   <<: *test_definition
@@ -157,70 +157,45 @@ unit:src/proto_006_PsCARTHA/lib_protocol:
   script:
     - dune build @src/proto_006_PsCARTHA/lib_protocol/runtest
 
-unit:signer_backends:
+unit:src/proto_alpha/lib_client:
   <<: *test_definition
   script:
-    - dune build @src/lib_signer_backends/runtest
+    - dune build @src/proto_alpha/lib_client/runtest
 
-unit:signer_backends/unix:
+unit:src/proto_alpha/lib_protocol:
   <<: *test_definition
   script:
-    - dune build @src/lib_signer_backends/unix/runtest
+    - dune build @src/proto_alpha/lib_protocol/runtest
 
-unit:micheline:
+unit:stdlib:
   <<: *test_definition
   script:
-    - dune build @src/lib_micheline/runtest
+    - dune build @src/lib_stdlib/runtest
 
-unit:protocol_environment:
+unit:p2p:
   <<: *test_definition
   script:
-    - dune build @src/lib_protocol_environment/runtest
-
-unit:src/bin_client:
-  <<: *test_definition
-  script:
-    - dune build @src/bin_client/runtest
+    - dune build @src/lib_p2p/runtest
 
 unit:crypto:
   <<: *test_definition
   script:
     - dune build @src/lib_crypto/runtest
 
-unit:ocplib-resto/lib_ezresto-directory:
+unit:ocaml-pbkdf:
   <<: *test_definition
   script:
-    - dune build @vendors/ocplib-resto/lib_ezresto-directory/runtest
+    - dune build @vendors/ocaml-pbkdf/runtest
 
 unit:ocplib-resto/lib_resto-directory:
   <<: *test_definition
   script:
     - dune build @vendors/ocplib-resto/lib_resto-directory/runtest
 
-unit:ocaml-pbkdf:
+unit:ocplib-resto/lib_ezresto-directory:
   <<: *test_definition
   script:
-    - dune build @vendors/ocaml-pbkdf/runtest
-
-unit:ocaml-lmdb:
-  <<: *test_definition
-  script:
-    - dune build @vendors/ocaml-lmdb/runtest
-
-unit:ocaml-uecc:
-  <<: *test_definition
-  script:
-    - dune build @vendors/ocaml-uecc/runtest
-
-unit:ocaml-bip39:
-  <<: *test_definition
-  script:
-    - dune build @vendors/ocaml-bip39/runtest
-
-unit:ocaml-hacl:
-  <<: *test_definition
-  script:
-    - dune build @vendors/ocaml-hacl/runtest
+    - dune build @vendors/ocplib-resto/lib_ezresto-directory/runtest
 
 unit:ocaml-secp256k1:
   <<: *test_definition
@@ -232,10 +207,30 @@ unit:ocaml-ledger-wallet:
   script:
     - dune build @vendors/ocaml-ledger-wallet/runtest
 
+unit:ocaml-uecc:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-uecc/runtest
+
 unit:ocaml-blake2:
   <<: *test_definition
   script:
     - dune build @vendors/ocaml-blake2/runtest
+
+unit:ocaml-lmdb:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-lmdb/runtest
+
+unit:ocaml-bip39:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-bip39/runtest
+
+unit:ocaml-hacl:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-hacl/runtest
 
 
 ##END_UNITEST##
