--- a/src/lib_requester/tezos-requester.opam
+++ b/src/lib_requester/tezos-requester.opam
@@ -12,6 +12,7 @@ depends: [
   "tezos-base"
   "tezos-stdlib-unix"
   "lwt-watcher"
+  "alcotest-lwt" { with-test & = "0.8.5" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
