--- a/src/lib_validation/tezos-validation.opam
+++ b/src/lib_validation/tezos-validation.opam
@@ -10,6 +10,7 @@ depends: [
   "dune" { >= "1.11" }
   "tezos-base"
   "tezos-storage"
+  "tezos-shell-context"
   "tezos-shell-services"
   "tezos-protocol-updater"
 ]
