Upgrade to irmin.2.1.0

--- a/src/lib_storage/dune
+++ b/src/lib_storage/dune
@@ -4,6 +4,7 @@
  (libraries tezos-base
             tezos-shell-services
             lmdb
+            logs.fmt
             digestif.c
             irmin
             irmin-pack
