Build: assign packages to runtest aliases in dune

--- a/src/lib_crypto/test/dune
+++ b/src/lib_crypto/test/dune
@@ -54,6 +54,7 @@
 
 (alias
  (name runtest)
+ (package tezos-crypto)
  (deps (alias runtest_merkle)
        (alias runtest_base58)
        (alias runtest_ed25519)
