--- a/dune
+++ b/dune
@@ -1,8 +1,6 @@
 (env
- (dev
-  (flags (:standard)))
  (release
-  (flags (:standard -O3))))
+  (ocamlopt_flags (:standard -O3))))
 
 (alias
  (name runtest)
