Tests: exclude bin_sandbox from dune @runtest due to a bug in dune
https://github.com/ocaml/dune/issues/3192

--- a/src/bin_sandbox/dune
+++ b/src/bin_sandbox/dune
@@ -101,7 +101,7 @@
 
 
 (alias
- (name runtest)
+ (name runtest_flextesa)
  (deps
   (alias runtest_sandbox_accusations_simple_double_baking)
   (alias runtest_sandbox_accusations_simple_double_endorsing)
