Build: restrict protocol generation tests to their opam packages

--- a/src/lib_protocol_compiler/dune_protocol.template
+++ b/src/lib_protocol_compiler/dune_protocol.template
@@ -103,3 +103,8 @@ include Tezos_raw_protocol_%%LIB_VERSION%%.Main
 (alias
  (name runtest_sandbox)
  (deps .tezos_protocol_%%LIB_VERSION%%.objs/native/tezos_protocol_%%LIB_VERSION%%.cmx))
+
+(alias
+ (name runtest)
+ (package tezos-protocol-%%VERSION%%)
+ (deps (alias runtest_sandbox)))
